Polish test formatting