@@ -30,273 +30,274 @@ class NoGuavaImmutableSetOfTest implements RewriteTest {
     public void defaults(RecipeSpec spec) {
         spec
           .recipe(new NoGuavaImmutableSetOf())
-          .parser(JavaParser.fromJavaVersion()
-            .classpath("guava"));
+          .parser(JavaParser.fromJavaVersion().classpath("guava"));
     }
 
     @Test
     void doNotChangeReturnsImmutableSet() {
-      rewriteRun(
         //language=java
-        java(
-          """
-            import com.google.common.collect.ImmutableSet;
-            
-            class Test {
-                ImmutableSet<String> getSet() {
-                    return ImmutableSet.of();
-                }
-            }
-          """
-        )
-      );
+        rewriteRun(
+          java(
+            """
+              import com.google.common.collect.ImmutableSet;
+                        
+              class Test {
+                  ImmutableSet<String> getSet() {
+                      return ImmutableSet.of();
+                  }
+              }
+              """
+          )
+        );
     }
 
     @Test
     void doNotChangeFieldAssignmentToImmutableSet() {
-      rewriteRun(
         //language=java
-        java(
-          """
-            import com.google.common.collect.ImmutableSet;
-            
-            class Test {
-                ImmutableSet<String> m;
-            
-                {
-                    this.m = ImmutableSet.of();
-                }
-            }
-          """
-        )
-      );
-    }
-
-    @Test
-    void doNotChangeAssignsToImmutableSet() {
-      rewriteRun(
-        //language=java
-        java(
-          """
-            import com.google.common.collect.ImmutableSet;
-            
-            class Test {
-                ImmutableSet<String> m;
-            
-                void init() {
-                    m = ImmutableSet.of();
-                }
-            }
-          """
-        )
-      );
-    }
-
-    @Test
-    void doNotChangeNewClass() {
-      rewriteRun(
-        //language=java
-        spec -> spec.parser(
-          JavaParser.fromJavaVersion().dependsOn(
-            """
-              import com.google.common.collect.ImmutableSet;
-                    
-              public class A {
-                  ImmutableSet<String> immutableSet;
-                  public A(ImmutableSet<String> immutableSet) {
-                      this.immutableSet = immutableSet;
-                  }
-              }
-            """
-          )
-        ),
-        //language=java
-        java(
-          """
-            import com.google.common.collect.ImmutableSet;
-            
-            class Test {
-                A a = new A(ImmutableSet.of());
-            }
-          """
-        )
-      );
-    }
-
-    @Test
-    void doNotChangeMethodInvocation() {
-      rewriteRun(
-        //language=java
-        spec -> spec.parser(
-          JavaParser.fromJavaVersion().dependsOn(
-            """
-              import com.google.common.collect.ImmutableSet;
-                    
-              public class A {
-                  ImmutableSet<String> immutableSet;
-                  public void method(ImmutableSet<String> immutableSet) {
-                      this.immutableSet = immutableSet;
-                  }
-              }
-            """
-          )
-        ),
-        //language=java
-        java(
-          """
-            import com.google.common.collect.ImmutableSet;
-            
-            class Test {
-                void method() {
-                    A a = new A();
-                    a.method(ImmutableSet.of());
-                }
-            }
-          """
-        )
-      );
-    }
-
-    @Test
-    void replaceArguments() {
-      rewriteRun(
-        version(
-          //language=java
+        rewriteRun(
           java(
             """
-              import java.util.Set;
               import com.google.common.collect.ImmutableSet;
-              
+                        
               class Test {
-                  Set<String> m = ImmutableSet.of("A", "B", "C", "D");
-              }
-            """,
-            """
-              import java.util.Set;
-              
-              class Test {
-                  Set<String> m = Set.of("A", "B", "C", "D");
-              }
-            """),
-          9
-        )
-      );
-    }
-
-    @Test
-    void fieldAssignmentToSet() {
-      rewriteRun(
-        version(
-          //language=java
-          java(
-            """
-              import java.util.Set;
-              import com.google.common.collect.ImmutableSet;
-              
-              class Test {
-                  Set<String> m;
+                  ImmutableSet<String> m;
+                        
                   {
                       this.m = ImmutableSet.of();
                   }
               }
-            """,
+              """
+          )
+        );
+    }
+
+    @Test
+    void doNotChangeAssignsToImmutableSet() {
+        //language=java
+        rewriteRun(
+          java(
             """
-              import java.util.Set;
-              
+              import com.google.common.collect.ImmutableSet;
+                            
               class Test {
-                  Set<String> m;
-                  {
-                      this.m = Set.of();
+                  ImmutableSet<String> m;
+                            
+                  void init() {
+                      m = ImmutableSet.of();
                   }
               }
-            """),
-          9
-        )
-      );
+              """
+          )
+        );
+    }
+
+    @Test
+    void doNotChangeNewClass() {
+        //language=java
+        rewriteRun(
+          spec -> spec.parser(
+            JavaParser.fromJavaVersion().dependsOn(
+              """
+                import com.google.common.collect.ImmutableSet;
+                      
+                public class A {
+                    ImmutableSet<String> immutableSet;
+                    public A(ImmutableSet<String> immutableSet) {
+                        this.immutableSet = immutableSet;
+                    }
+                }
+                """
+            )
+          ),
+          java(
+            """
+              import com.google.common.collect.ImmutableSet;
+                            
+              class Test {
+                  A a = new A(ImmutableSet.of());
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void doNotChangeMethodInvocation() {
+        //language=java
+        rewriteRun(
+          spec -> spec.parser(
+            JavaParser.fromJavaVersion().dependsOn(
+              """
+                import com.google.common.collect.ImmutableSet;
+                      
+                public class A {
+                    ImmutableSet<String> immutableSet;
+                    public void method(ImmutableSet<String> immutableSet) {
+                        this.immutableSet = immutableSet;
+                    }
+                }
+                """
+            )
+          ),
+          java(
+            """
+              import com.google.common.collect.ImmutableSet;
+                            
+              class Test {
+                  void method() {
+                      A a = new A();
+                      a.method(ImmutableSet.of());
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void replaceArguments() {
+        //language=java
+        rewriteRun(
+          version(
+            java(
+              """
+                import java.util.Set;
+                import com.google.common.collect.ImmutableSet;
+                                
+                class Test {
+                    Set<String> m = ImmutableSet.of("A", "B", "C", "D");
+                }
+                """,
+              """
+                import java.util.Set;
+                                
+                class Test {
+                    Set<String> m = Set.of("A", "B", "C", "D");
+                }
+                """
+            ),
+            9
+          )
+        );
+    }
+
+    @Test
+    void fieldAssignmentToSet() {
+        //language=java
+        rewriteRun(
+          version(
+            java(
+              """
+                import java.util.Set;
+                import com.google.common.collect.ImmutableSet;
+                                
+                class Test {
+                    Set<String> m;
+                    {
+                        this.m = ImmutableSet.of();
+                    }
+                }
+                """,
+              """
+                import java.util.Set;
+                                
+                class Test {
+                    Set<String> m;
+                    {
+                        this.m = Set.of();
+                    }
+                }
+                """
+            ),
+            9
+          )
+        );
     }
 
     @Test
     void assigmentToSet() {
-      rewriteRun(
-        version(
-          //language=java
-          java(
-            """
-              import java.util.Set;
-              import com.google.common.collect.ImmutableSet;
-              
-              class Test {
-                  Set<String> m = ImmutableSet.of();
-              }
-            """,
-            """
-              import java.util.Set;
-              
-              class Test {
-                  Set<String> m = Set.of();
-              }
-            """),
-          9
-        )
-      );
+        //language=java
+        rewriteRun(
+          version(
+            java(
+              """
+                import java.util.Set;
+                import com.google.common.collect.ImmutableSet;
+                                
+                class Test {
+                    Set<String> m = ImmutableSet.of();
+                }
+                """,
+              """
+                import java.util.Set;
+                                
+                class Test {
+                    Set<String> m = Set.of();
+                }
+                """
+            ),
+            9
+          )
+        );
     }
 
     @Test
     void returnsSet() {
-      rewriteRun(
-        version(
-          //language=java
-          java(
-            """
-              import java.util.Set;
-              import com.google.common.collect.ImmutableSet;
-              
-              class Test {
-                  Set<String> set() {
-                      return ImmutableSet.of();
-                  }
-              }
-            """,
-            """
-              import java.util.Set;
-              
-              class Test {
-                  Set<String> set() {
-                      return Set.of();
-                  }
-              }
-            """),
-          9
-        )
-      );
+        //language=java
+        rewriteRun(
+          version(
+            java(
+              """
+                import java.util.Set;
+                import com.google.common.collect.ImmutableSet;
+                                
+                class Test {
+                    Set<String> set() {
+                        return ImmutableSet.of();
+                    }
+                }
+                """,
+              """
+                import java.util.Set;
+                                
+                class Test {
+                    Set<String> set() {
+                        return Set.of();
+                    }
+                }
+                """
+            ),
+            9
+          )
+        );
     }
 
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/137")
     @Test
     void setOfInts() {
+        //language=java
         rewriteRun(
           version(
-            //language=java
             java(
               """
                 import java.util.Set;
                 import com.google.common.collect.ImmutableSet;
-                
+                                
                 class Test {
                     Set<Integer> set() {
                         return ImmutableSet.of(1, 2, 3);
                     }
                 }
-              """,
+                """,
               """
                 import java.util.Set;
-                
+                                
                 class Test {
                     Set<Integer> set() {
                         return Set.of(1, 2, 3);
                     }
                 }
-              """
+                """
             ),
             9
           )
@@ -305,10 +306,9 @@ class NoGuavaImmutableSetOfTest implements RewriteTest {
 
     @Test
     void newClassWithSetArgument() {
-      rewriteRun(
         //language=java
-        spec -> spec.parser(
-          JavaParser.fromJavaVersion().classpath("guava").dependsOn(
+        rewriteRun(
+          java(
             """
               import java.util.Set;
                   
@@ -318,102 +318,101 @@ class NoGuavaImmutableSetOfTest implements RewriteTest {
                       this.set = set;
                   }
               }
-            """
-        )),
-        version(
-          //language=java
-          java(
-            """
-              import com.google.common.collect.ImmutableSet;
-              
-              class Test {
-                  A a = new A(ImmutableSet.of());
-              }
-            """,
-            """
-              import java.util.Set;
-              
-              class Test {
-                  A a = new A(Set.of());
-              }
-            """),
-          9
-        )
-      );
+              """
+          ),
+          version(
+            //language=java
+            java(
+              """
+                import com.google.common.collect.ImmutableSet;
+                                
+                class Test {
+                    A a = new A(ImmutableSet.of());
+                }
+                """,
+              """
+                import java.util.Set;
+                                
+                class Test {
+                    A a = new A(Set.of());
+                }
+                """
+            ),
+            9
+          )
+        );
     }
 
     @Test
     void methodInvocationWithSetArgument() {
-      rewriteRun(
         //language=java
-        spec -> spec.parser(
-          JavaParser.fromJavaVersion().classpath("guava").dependsOn(
+        rewriteRun(
+          java(
             """
               import java.util.Set;
-              
+                              
               public class A {
                   Set<String> set;
                   public void method(Set<String> set) {
                       this.set = set;
                   }
               }
-            """
+              """
+          ),
+          version(
+            java(
+              """
+                import com.google.common.collect.ImmutableSet;
+                                
+                class Test {
+                    void method() {
+                        A a = new A();
+                        a.method(ImmutableSet.of());
+                    }
+                }
+                """,
+              """
+                import java.util.Set;
+                                
+                class Test {
+                    void method() {
+                        A a = new A();
+                        a.method(Set.of());
+                    }
+                }
+                """
+            ),
+            9
           )
-        ),
-        version(
-          //language=java
-          java(
-            """
-              import com.google.common.collect.ImmutableSet;
-              
-              class Test {
-                  void method() {
-                      A a = new A();
-                      a.method(ImmutableSet.of());
-                  }
-              }
-            """,
-            """
-              import java.util.Set;
-              
-              class Test {
-                  void method() {
-                      A a = new A();
-                      a.method(Set.of());
-                  }
-              }
-            """),
-          9
-        )
-      );
+        );
     }
 
     @Disabled("Requires https://github.com/openrewrite/rewrite/issues/2375")
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/138")
     @Test
     void insideAnonymousArrayInitializer() {
+        //language=java
         rewriteRun(
           version(
-            //language=java
             java(
               """
                 import com.google.common.collect.ImmutableSet;
-                
+                                
                 class A {
                     Object[] o = new Object[] {
                             ImmutableSet.of(1, 2, 3)
                     };
                 }
-              """,
+                """,
               """
                 import java.util.Set;
-                
+                                
                 class A {
                     Object[] o = new Object[] {
                             Set.of(1, 2, 3)
                     };
                 }
-              """
+                """
             ),
             11
           )
@@ -423,24 +422,25 @@ class NoGuavaImmutableSetOfTest implements RewriteTest {
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/136")
     @Test
     void assignToMoreGeneralType() {
+        //language=java
         rewriteRun(
           version(
-            //language=java
             java(
               """
                 import com.google.common.collect.ImmutableSet;
-                
+                                
                 class A {
                     Object o = ImmutableSet.of(1, 2, 3);
                 }
-              """,
+                """,
               """
                 import java.util.Set;
-                
+                                
                 class A {
                     Object o = Set.of(1, 2, 3);
                 }
-              """),
+                """
+            ),
             11
           )
         );
