@@ -17,7 +17,6 @@ package org.openrewrite.java.migrate.lang;
 
 import org.junit.jupiter.api.Test;
 import org.openrewrite.Issue;
-import org.openrewrite.java.JavaParser;
 import org.openrewrite.test.RecipeSpec;
 import org.openrewrite.test.RewriteTest;
 import org.openrewrite.test.TypeValidation;
@@ -25,47 +24,143 @@ import org.openrewrite.test.TypeValidation;
 import static org.openrewrite.java.Assertions.java;
 import static org.openrewrite.java.Assertions.version;
 
+@SuppressWarnings("RedundantStringFormatCall")
 class StringFormattedTest implements RewriteTest {
     public void defaults(RecipeSpec spec) {
         spec.recipe(new StringFormatted())
-          .typeValidationOptions(new TypeValidation().methodInvocations(false))
-          .parser(JavaParser.fromJavaVersion());
+          .typeValidationOptions(new TypeValidation().methodInvocations(false));
+    }
+
+    @Test
+    @Issue("https://github.com/openrewrite/rewrite/issues/2163")
+    void textBlock() {
+        //language=java
+        rewriteRun(
+          version(
+            java(
+              """
+                package com.example.app;
+                class A {
+                    String str = String.format(\"""
+                    foo
+                    %s
+                    \""", "a");
+                }
+                """,
+              """
+                package com.example.app;
+                class A {
+                    String str = \"""
+                    foo
+                    %s
+                    \""".formatted("a");
+                }
+                """
+            ),
+            17
+          )
+        );
+    }
+
+    @Test
+    void concatenatedText() {
+        //language=java
+        rewriteRun(
+          version(
+            java(
+              """
+                package com.example.app;
+                class A {
+                    String str = String.format("foo"
+                            + "%s", "a");
+                }""", """
+                package com.example.app;
+                class A {
+                    String str = ("foo"
+                            + "%s").formatted("a");
+                }"""
+            ),
+            17
+          )
+        );
+    }
+
+    @Test
+    void callingFunction() {
+        //language=java
+        rewriteRun(
+          version(
+            java(
+              """
+                package com.example.app;
+
+                class A {
+                    String str = String.format(getTemplateString(), "a");
+
+                    private String getTemplateString() {
+                        return "foo %s";
+                    }
+                }
+                """,
+              """
+                package com.example.app;
+
+                class A {
+                    String str = getTemplateString().formatted("a");
+
+                    private String getTemplateString() {
+                        return "foo %s";
+                    }
+                }
+                """
+            ),
+            17
+          )
+        );
     }
 
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/77")
     void oneArgument() {
+        //language=java
         rewriteRun(
           version(
-            java("""
-                    class A {
-                        String str = String.format("foo");
-                    }
+            java(
+              """
+                class A {
+                    String str = String.format("foo");
+                }
                 """,
               """
-                    class A {
-                        String str = "foo".formatted();
-                    }
-                """),
-            17)
+                class A {
+                    String str = "foo".formatted();
+                }
+                """
+            ),
+            17
+          )
         );
     }
 
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/77")
     void twoArguments() {
+        //language=java
         rewriteRun(
           version(
-            java("""
-                    class A {
-                        String str = String.format("foo %s", "a");
-                    }
+            java(
+              """
+                class A {
+                    String str = String.format("foo %s", "a");
+                }
                 """,
               """
-                    class A {
-                        String str = "foo %s".formatted("a");
-                    }
-                """), 17
+                class A {
+                    String str = "foo %s".formatted("a");
+                }
+                """
+            ),
+            17
           )
         );
     }
@@ -73,18 +168,22 @@ class StringFormattedTest implements RewriteTest {
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/77")
     void threeArguments() {
+        //language=java
         rewriteRun(
           version(
-            java("""
-                    class A {
-                        String str = String.format("foo %s %d", "a", 1);
-                    }
+            java(
+              """
+                class A {
+                    String str = String.format("foo %s %d", "a", 1);
+                }
                 """,
               """
-                    class A {
-                        String str = "foo %s %d".formatted("a", 1);
-                    }
-                """), 17
+                class A {
+                    String str = "foo %s %d".formatted("a", 1);
+                }
+                """
+            ),
+            17
           )
         );
     }
@@ -92,18 +191,21 @@ class StringFormattedTest implements RewriteTest {
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/77")
     void fourArguments() {
+        //language=java
         rewriteRun(
           version(
             java("""
-                    class A {
-                        String str = String.format("foo %s %d %f", "a", 1, 2.0);
-                    }
+                class A {
+                    String str = String.format("foo %s %d %f", "a", 1, 2.0);
+                }
                 """,
               """
-                    class A {
-                        String str = "foo %s %d %f".formatted("a", 1, 2.0);
-                    }
-                """), 17
+                class A {
+                    String str = "foo %s %d %f".formatted("a", 1, 2.0);
+                }
+                """
+            ),
+            17
           )
         );
     }
@@ -111,18 +213,22 @@ class StringFormattedTest implements RewriteTest {
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/77")
     void splitFirstArgument() {
+        //language=java
         rewriteRun(
           version(
-            java("""
-                    class A {
-                        String str = String.format("foo " + "%s", "a");
-                    }
+            java(
+              """
+                class A {
+                    String str = String.format("foo " + "%s", "a");
+                }
                 """,
               """
-                    class A {
-                        String str = ("foo " + "%s").formatted("a");
-                    }
-                """), 17
+                class A {
+                    String str = ("foo " + "%s").formatted("a");
+                }
+                """
+            ),
+            17
           )
         );
     }
@@ -130,18 +236,21 @@ class StringFormattedTest implements RewriteTest {
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/77")
     void splitSecondArgument() {
+        //language=java
         rewriteRun(
           version(
             java("""
-                    class A {
-                        String str = String.format("foo %s", "a" + "b");
-                    }
+                class A {
+                    String str = String.format("foo %s", "a" + "b");
+                }
                 """,
               """
-                    class A {
-                        String str = "foo %s".formatted("a" + "b");
-                    }
-                """), 17
+                class A {
+                    String str = "foo %s".formatted("a" + "b");
+                }
+                """
+            ),
+            17
           )
         );
     }
@@ -149,24 +258,27 @@ class StringFormattedTest implements RewriteTest {
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/77")
     void doNotWrapMethodInvocation() {
+        //language=java
         rewriteRun(
           version(
             java("""
-                    class A {
-                        String str = String.format(someMethod(), "a");
-                        String someMethod() {
-                            return "foo %s";
-                        }
+                class A {
+                    String str = String.format(someMethod(), "a");
+                    String someMethod() {
+                        return "foo %s";
                     }
+                }
                 """,
               """
-                    class A {
-                        String str = someMethod().formatted("a");
-                        String someMethod() {
-                            return "foo %s";
-                        }
+                class A {
+                    String str = someMethod().formatted("a");
+                    String someMethod() {
+                        return "foo %s";
                     }
-                """), 17
+                }
+                """
+            ),
+            17
           )
         );
     }
@@ -174,24 +286,27 @@ class StringFormattedTest implements RewriteTest {
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/77")
     void doNotWrapLocalVariable() {
+        //language=java
         rewriteRun(
           version(
             java("""
-                    class A {
-                        String someMethod() {
-                            String fmt = "foo %s";
-                            String str = String.format(fmt, "a");
-                        }
+                class A {
+                    String someMethod() {
+                        String fmt = "foo %s";
+                        String str = String.format(fmt, "a");
                     }
+                }
                 """,
               """
-                    class A {
-                        String someMethod() {
-                            String fmt = "foo %s";
-                            String str = fmt.formatted("a");
-                        }
+                class A {
+                    String someMethod() {
+                        String fmt = "foo %s";
+                        String str = fmt.formatted("a");
                     }
-                """), 17
+                }
+                """
+            ),
+            17
           )
         );
     }
@@ -199,20 +314,23 @@ class StringFormattedTest implements RewriteTest {
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/77")
     void doNotWrapField() {
+        //language=java
         rewriteRun(
           version(
             java("""
-                    class A {
-                        static final String fmt = "foo %s";
-                        String str = String.format(fmt, "a");
-                    }
+                class A {
+                    static final String fmt = "foo %s";
+                    String str = String.format(fmt, "a");
+                }
                 """,
               """
-                    class A {
-                        static final String fmt = "foo %s";
-                        String str = fmt.formatted("a");
-                    }
-                """), 17
+                class A {
+                    static final String fmt = "foo %s";
+                    String str = fmt.formatted("a");
+                }
+                """
+            ),
+            17
           )
         );
     }
@@ -220,19 +338,23 @@ class StringFormattedTest implements RewriteTest {
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/77")
     void removeStaticImport() {
+        //language=java
         rewriteRun(
           version(
-            java("""
-                    import static java.lang.String.format;
-                    class A {
-                        String str = format("foo %s", "a");
-                    }
+            java(
+              """
+                import static java.lang.String.format;
+                class A {
+                    String str = format("foo %s", "a");
+                }
                 """,
               """
-                    class A {
-                        String str = "foo %s".formatted("a");
-                    }
-                """), 17
+                class A {
+                    String str = "foo %s".formatted("a");
+                }
+                """
+            ),
+            17
           )
         );
     }
@@ -240,14 +362,17 @@ class StringFormattedTest implements RewriteTest {
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/122")
     void doNotMatchLocale() {
+        //language=java
         rewriteRun(
           version(
             java("""
-                  import java.util.Locale;
-                  class A {
-                      String str = String.format(Locale.US, "foo %s", "a");
-                  }
-              """), 17
+              import java.util.Locale;
+              class A {
+                  String str = String.format(Locale.US, "foo %s", "a");
+              }
+              """
+            ),
+            17
           )
         );
     }
@@ -255,18 +380,22 @@ class StringFormattedTest implements RewriteTest {
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/122")
     void doNotChangeLackOfWhitespace() {
+        //language=java
         rewriteRun(
           version(
-            java("""
-                    class A {
-                        String str = String.format("foo %s %s","a","b");
-                    }
+            java(
+              """
+                class A {
+                    String str = String.format("foo %s %s","a","b");
+                }
                 """,
               """
-                    class A {
-                        String str = "foo %s %s".formatted("a", "b");
-                    }
-                """), 17
+                class A {
+                    String str = "foo %s %s".formatted("a", "b");
+                }
+                """
+            ),
+            17
           )
         );
     }
@@ -274,48 +403,54 @@ class StringFormattedTest implements RewriteTest {
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/122")
     void doNotChangeWhitespaceWithNewlines() {
+        //language=java
         rewriteRun(
           version(
             java("""
-                    class A {
-                        String str = String.format("foo %s %s",
-                            "a",
-                            "b");
-                    }
+                class A {
+                    String str = String.format("foo %s %s",
+                        "a",
+                        "b");
+                }
                 """,
               """
-                    class A {
-                        String str = "foo %s %s".formatted(
-                                "a",
-                                "b");
-                    }
-                """), 17)
+                class A {
+                    String str = "foo %s %s".formatted(
+                            "a",
+                            "b");
+                }
+                """
+            ),
+            17
+          )
         );
     }
 
     @Test
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/122")
     void doNotChangeWhitespaceWithNewlinesAndComments() {
+        //language=java
         rewriteRun(
           version(
             java("""
-                    class A {
-                        String str = String.format("foo %s %s",
+                class A {
+                    String str = String.format("foo %s %s",
+                        "a",
+                        // B
+                        "b");
+                }
+                """,
+              """
+                class A {
+                    String str = "foo %s %s".formatted(
                             "a",
                             // B
                             "b");
-                    }
-                """,
-              """
-                    class A {
-                        String str = "foo %s %s".formatted(
-                                "a",
-                                // B
-                                "b");
-                    }
-                """), 17
+                }
+                """
+            ),
+            17
           )
         );
     }
-
 }
